[tool.poetry]
name = "bybit-async"
packages = [
    { includde = "bybit_async" }
]
version = "1.0.0"
description = "Async API for bybit exchange"
authors = ["Maxim Malikov <maxim.malikov1997@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
